k8s-deployments/Kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-360
  namespace: app-360
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/request-timeout: "3600"
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
  - hosts:
    - akasa-fin.in
    secretName: jaguar-tls-secret
  rules:
  - host: akasa-fin.in
    http:
      paths:
      - path: /
        backend:
          service:
            name: app-360
            port:
              number: 80
        pathType: Prefix
      - path: /master
        backend:
          service:
            name: back-360-master
            port:
              number: 8443
        pathType: Prefix
      - path: /slave
        backend:
          service:
            name: back-360-slave
            port:
              number: 8443
        pathType: Prefix
      - path: /crud
        backend:
          service:
            name: crud
            port:
              number: 3000
        pathType: Prefix
      - path: /callCalc
        backend:
          service:
            name: call-calc
            port:
              number: 3000
        pathType: Prefix
